# water-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
assets/: NOTICE
cmake/: EmbedShaders.cmake  GenShaderBlob.cmake
demo/: CMakeLists.txt  water_window.cpp
native/: CMakeLists.txt
native/core/include/water/: camera.hpp  caustics_pass.hpp  device.hpp  fullscreen_pass.hpp  heightfield_sim.hpp  mesh.hpp  result.hpp  scene_pass.hpp  skybox.hpp  texture.hpp
native/core/src/: caustics_pass.cpp  device.cpp  fullscreen_pass.cpp  heightfield_sim.cpp  mesh.cpp  scene_pass.cpp  skybox.cpp  texture.cpp
native/test/: test_caustics.cpp  test_clear.cpp  test_scene.cpp  test_shading.cpp  test_sim.cpp  test_sky.cpp  test_water.cpp
shaders/: caustics.frag  caustics.vert  debug_scene.frag  fill.frag  fullscreen.vert  intersect.glsl  pool.frag  pool.vert  sim_clear.frag  sim_drop.frag  sim_normal.frag  sim_sphere.frag  sim_update.frag  skybox.frag  skybox.vert  sphere.frag  sphere.vert  surface_common.glsl  surface_push.glsl  water.vert  water_above.frag  water_below.frag  water_common.glsl
test/spikes/: CMakeLists.txt
test/spikes/common/: vkboot.hpp
test/spikes/sp_dmabuf/: sp_dmabuf.cpp
test/spikes/sp_sim/: fullscreen.vert  sim_update.frag  sim_update_naive.comp  sim_update_tiled.comp  sp_sim.cpp
